changed hero image

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- Hero banner image and text -->
         <div class="hero-main-wrapper">
             <div class="hero-image">
-                <div class="credit">Photo by Ana Paula Lima from Pexels</div>
+                <!-- <div class="credit">Photo by Ana Paula Lima from Pexels</div> -->
                 <span>
                     <img src="./images//logo.svg" alt="gold house logo">
                     <div class="hero-banner-text">
