added back to top functionality and sticky social button on left

--- a/index.html
+++ b/index.html
@@ -59,30 +59,30 @@
                         <img src="./images/gallery/ring1.jpg" alt="earring image">
                     </div>
                 </div>
-               <div>
+                <div>
                     <h2>Earrings</h2>
                     <div class="gallery-image">
                         <img src="https://picsum.photos/400/800" alt="earring image">
                     </div>
-               </div>
-               <div>
+                </div>
+                <div>
                     <h2>Pendants</h2>
                     <div class="gallery-image">
                         <img src="https://picsum.photos/600/300" alt="earring image">
                     </div>
-               </div>
+                </div>
                 <div>
                     <h2>Jhumka</h2>
                     <div class="gallery-image">
                         <img src="./images/gallery/ring1.jpg" alt="earring image">
                     </div>
                 </div>
-               <div>
+                <div>
                     <h2>Bangles</h2>
                     <div class="gallery-image">
                         <img src="./images/gallery/ring1.jpg" alt="earring image">
                     </div>
-               </div>
+                </div>
                 <div>
                     <h2>Bracelets</h2>
                     <div class="gallery-image">
@@ -105,12 +105,12 @@
         <!-- Services and features -->
         <section class="service-main-wrapper container">
             <h2>Service & Feature We Offer</h2>
-           <div class="service-sub-wrapper">
+            <div class="service-sub-wrapper">
                 <h4>Return & Exchange</h4>
                 <h4>Jewelry Clean</h4>
                 <h4>Solitary Expert</h4>
                 <h4>And more..</h4>
-           </div>
+            </div>
         </section>
 
         <!-- footer -->
@@ -138,16 +138,28 @@
             </div>
         </footer>
         <div class="copyright">
-                <div>
-                    Gold House &copy; 2019
-                </div>
-                <div>
-                    Designed by: Shubham Kumar - <a href="http://www.deftdesigner.com" target="_blank">Deftdesigner</a> 
-                </div>
+            <div>
+                Gold House &copy; 2019
             </div>
+            <div>
+                Designed by: Shubham Kumar - <a href="http://www.deftdesigner.com" target="_blank">Deftdesigner</a>
+            </div>
+        </div>
 
+        <!-- Back to top button -->
+        <div class="scrollTop" id="scrollTop">Top</div>
+        <!-- sticky social on side -->
+        <div class="stickySocial" id="stickySocial">
+            <a href="https://www.facebook.com/GOLD-HOUSE-2149228782074037/" target="_blank">
+                <img src="./images/icons/facebook_icon.svg" alt="facebook icon">
+            </a>
+            <a href="https://www.facebook.com/GOLD-HOUSE-2149228782074037/" target="_blank">
+                <img src="./images/icons/instagram_icon.svg" alt="instagram icon">
+            </a>
+        </div>
     </div>
     <script src="./scripts/navbar.js"></script>
+    <script src="./scripts/scrollTop.js"></script>
 </body>
 
 </html>
